<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_class">

    <fragment
        android:id="@+id/navigation_class"
        android:name="com.example.fiap.myclass.ui.class.ClassFragment"
        android:label="@string/title_class"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/navigation_scheduled"
        android:name="com.example.fiap.myclass.ui.scheduled.ScheduledFragment"
        android:label="@string/title_scheduled"
        tools:layout="@layout/fragment_scheduled" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fiap.myclass.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>