<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:text="@string/myClass"
        android:textColor="@color/blue_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="126dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/full_name"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/edt_full_name"
        tools:layout_editor_absoluteX="16dp" />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        tools:layout_editor_absoluteX="16dp" />


    <Button
        android:id="@+id/btn_register_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="126dp" />

</androidx.constraintlayout.widget.ConstraintLayout>