<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.profile.ProfileFragment">

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/full_name"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile"
        tools:layout_editor_absoluteX="47dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/edt_full_name"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_gender"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:hint="@string/gender"
        android:maxWidth="185dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_input"
            android:inputType="none"
            android:textColorHint="#757575"
            android:height="48dp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/edt_birthdate"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:height="48dp"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/birth_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/edt_gender"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>